# cli

./: .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  CLI Development.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  justfile
.config/: nextest.toml
.githooks/: pre-commit
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  pr-checks.yml  release.yml
.serena/: project.yml
.serena/memories/: architecture.md  style_conventions.md  suggested_commands.md  task_completion.md
scripts/: clean-lockfile.sh
src/: cli.rs  error.rs  lib.rs  main.rs
src/client/: auth.rs  mod.rs
src/commands/: account.rs  auth.rs  bulk.rs  check.rs  dev.rs  identity.rs  jwks.rs  mod.rs  orgs.rs  profiles.rs  relationships.rs  schemas.rs  shell.rs  stream.rs  tokens.rs
src/commands/dev/: commands.rs  constants.rs  docker.rs  doctor.rs  kubernetes.rs  mod.rs  output.rs  paths.rs  reset.rs  start.rs  status.rs  stop.rs  tailscale.rs
src/config/: mod.rs  profile.rs
src/i18n/: bundle.rs  mod.rs
src/i18n/locales/: en-US.ftl  mod.rs
src/output/: display.rs  mod.rs  table.rs
src/tui/: confirm.rs  doctor_view.rs  form.rs  install_view.rs  mod.rs  progress.rs  spinner.rs  start_view.rs  status_view.rs  stop_view.rs  uninstall_view.rs
tests/common/: mod.rs
tests/integration/: common.rs  main.rs
