[package]
name = "inferadb-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["InferaDB Team"]
description = "InferaDB CLI—debug authorization decisions, test policies, and manage tenants from your terminal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/inferadb/cli"
readme = "README.md"
keywords = ["cli", "authorization", "rbac", "rebac", "zanzibar"]
categories = ["command-line-utilities", "authentication"]

[[bin]]
name = "inferadb"
path = "src/main.rs"

[lib]
name = "inferadb_cli"
path = "src/lib.rs"

[dependencies]
# InferaDB SDK
inferadb = { version = "0.1", default-features = false, features = ["rest", "rustls"] }

# CLI Framework
clap = { version = "4.5", features = ["derive", "env", "wrap_help", "string", "cargo"] }
clap_complete = "4.5"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error Handling
thiserror = "2"
anyhow = "1"

# Configuration
dirs = "6"

# Terminal UI
unicode-width = "0.2"

# Localization (Project Fluent)
fluent-bundle = "0.16"
unic-langid = "0.9"

# Credential Storage
keyring = "3"

# OAuth PKCE
oauth2 = "5"
tiny_http = "0.12"

# HTTP client (for health checks)
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }

# Unix utilities
libc = "0.2"

# Other
url = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webbrowser = "1"

# Async utils
async-trait = "0.1"
futures = "0.3"
base64 = "0.22.1"
teapot = "0.1.0-alpha.1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"

[[test]]
name = "integration"
path = "tests/integration/main.rs"

[features]
default = []

# Lints for improved code quality
[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
# Lint groups with lower priority so individual overrides work
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow pedantic lints that are too noisy or not applicable
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"        # Many functions can panic but documenting all is verbose
multiple_crate_versions = "allow"   # Transitive deps often have version conflicts
future_not_send = "allow"           # CLI doesn't need Send futures
too_many_lines = "allow"            # Some commands are inherently long
unused_async = "allow"              # Command handlers are async for consistency
fn_params_excessive_bools = "allow" # CLI commands often have multiple boolean flags
struct_excessive_bools = "allow"    # CLI config often needs many boolean options
return_self_not_must_use = "allow"  # Builder methods don't always need #[must_use]
cast_possible_truncation = "allow"  # Intentional casts (e.g., exit codes, latencies)
cast_sign_loss = "allow"            # Intentional casts
cast_possible_wrap = "allow"        # Intentional casts
needless_pass_by_value = "allow"    # String args are often intentional for ergonomics
items_after_statements = "allow"    # Local struct defs in functions are fine
unused_self = "allow"               # Methods may need self for future use
missing_fields_in_debug = "allow"   # Debug impls don't need all fields
format_push_string = "allow"        # Simple formatting patterns are readable
option_if_let_else = "allow"        # if let is often more readable than map_or
